// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component should match snapshots 1`] = `
.c0 {
  -webkit-appearance: none;
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  margin-top: 0px;
  padding: 8px 16px;
  background-color: #ffffff;
  border: 2px solid #999999;
  color: #424242;
}

.c0::-webkit-inner-spin-button,
.c0::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c0::-webkit-calendar-picker-indicator,
.c0::-webkit-search-cancel-button {
  display: none;
}

.c0::-ms-clear {
  display: none;
}

.c0:hover,
.c0:focus {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgba(18,80,196,0.2),0px 2px 2px 0px rgba(18,80,196,0.14),0px 1px 5px 0px rgba(18,80,196,0.12);
}

.c0[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  color: #999999;
}

.c0:-webkit-autofill {
  box-shadow: 0 0 0 1000px #fff5f5 inset;
}

.c0[disabled] {
  box-shadow: none;
  cursor: not-allowed;
}

<input
  className="c0"
/>
`;

exports[`Input component should match snapshots 2`] = `
.c0 {
  -webkit-appearance: none;
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  margin-top: 0px;
  padding: 8px 16px;
  background-color: rgba(0,0,0,0.7);
  border: 2px solid transparent;
  color: #ffffff;
}

.c0::-webkit-inner-spin-button,
.c0::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c0::-webkit-calendar-picker-indicator,
.c0::-webkit-search-cancel-button {
  display: none;
}

.c0::-ms-clear {
  display: none;
}

.c0::-webkit-input-placeholder {
  color: #ffffff;
}

.c0::-moz-placeholder {
  color: #ffffff;
}

.c0:-ms-input-placeholder {
  color: #ffffff;
}

.c0::placeholder {
  color: #ffffff;
}

.c0:hover,
.c0:focus {
  border-color: #0CC0EA;
}

.c0[disabled] {
  color: rgba(255,255,255,0.5);
  border-color: transparent;
}

.c0[disabled] {
  box-shadow: none;
  cursor: not-allowed;
}

<input
  className="c0"
/>
`;

exports[`Input component should match snapshots 3`] = `
.c0 {
  -webkit-appearance: none;
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  margin-top: 0px;
  padding: 8px 16px;
  background-color: #ffffff;
  border: 2px solid #999999;
  color: #424242;
  border-color: #e91b0c;
}

.c0::-webkit-inner-spin-button,
.c0::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c0::-webkit-calendar-picker-indicator,
.c0::-webkit-search-cancel-button {
  display: none;
}

.c0::-ms-clear {
  display: none;
}

.c0:hover,
.c0:focus {
  border-color: #e91b0c;
  box-shadow: 0px 3px 1px -2px rgba(233,27,12,0.2),0px 2px 2px 0px rgba(233,27,12,0.14),0px 1px 5px 0px rgba(233,27,12,0.12);
}

.c0[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  color: #999999;
}

.c0:-webkit-autofill {
  box-shadow: 0 0 0 1000px #fff5f5 inset;
}

.c0[disabled] {
  box-shadow: none;
  cursor: not-allowed;
}

<input
  className="c0"
/>
`;

exports[`Input component should match snapshots 4`] = `
.c0 {
  -webkit-appearance: none;
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  margin-top: 0px;
  padding: 8px 16px;
  background-color: rgba(0,0,0,0.7);
  border: 2px solid transparent;
  color: #ffffff;
  border-color: #ffffff;
}

.c0::-webkit-inner-spin-button,
.c0::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c0::-webkit-calendar-picker-indicator,
.c0::-webkit-search-cancel-button {
  display: none;
}

.c0::-ms-clear {
  display: none;
}

.c0::-webkit-input-placeholder {
  color: #ffffff;
}

.c0::-moz-placeholder {
  color: #ffffff;
}

.c0:-ms-input-placeholder {
  color: #ffffff;
}

.c0::placeholder {
  color: #ffffff;
}

.c0:hover,
.c0:focus {
  border-color: #0CC0EA;
}

.c0[disabled] {
  color: rgba(255,255,255,0.5);
  border-color: transparent;
}

.c0[disabled] {
  box-shadow: none;
  cursor: not-allowed;
}

<input
  className="c0"
/>
`;

exports[`Input component should match snapshots 5`] = `
.c0 {
  -webkit-appearance: none;
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  margin-top: 0px;
  padding: 8px 16px;
  background-color: #ffffff;
  border: 2px solid #999999;
  color: #424242;
}

.c0::-webkit-inner-spin-button,
.c0::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c0::-webkit-calendar-picker-indicator,
.c0::-webkit-search-cancel-button {
  display: none;
}

.c0::-ms-clear {
  display: none;
}

.c0:hover,
.c0:focus {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgba(18,80,196,0.2),0px 2px 2px 0px rgba(18,80,196,0.14),0px 1px 5px 0px rgba(18,80,196,0.12);
}

.c0[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  color: #999999;
}

.c0:-webkit-autofill {
  box-shadow: 0 0 0 1000px #fff5f5 inset;
}

.c0[disabled] {
  box-shadow: none;
  cursor: not-allowed;
}

<input
  className="c0"
  disabled={true}
/>
`;

exports[`Input component should match snapshots 6`] = `
.c0 {
  -webkit-appearance: none;
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  margin-top: 0px;
  padding: 8px 16px;
  background-color: rgba(0,0,0,0.7);
  border: 2px solid transparent;
  color: #ffffff;
}

.c0::-webkit-inner-spin-button,
.c0::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c0::-webkit-calendar-picker-indicator,
.c0::-webkit-search-cancel-button {
  display: none;
}

.c0::-ms-clear {
  display: none;
}

.c0::-webkit-input-placeholder {
  color: #ffffff;
}

.c0::-moz-placeholder {
  color: #ffffff;
}

.c0:-ms-input-placeholder {
  color: #ffffff;
}

.c0::placeholder {
  color: #ffffff;
}

.c0:hover,
.c0:focus {
  border-color: #0CC0EA;
}

.c0[disabled] {
  color: rgba(255,255,255,0.5);
  border-color: transparent;
}

.c0[disabled] {
  box-shadow: none;
  cursor: not-allowed;
}

<input
  className="c0"
  disabled={true}
/>
`;

exports[`Input component should match snapshots 7`] = `
.c0 {
  -webkit-appearance: none;
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  margin-top: 0px;
  padding: 8px 16px;
  background-color: #ffffff;
  border: 2px solid #999999;
  color: #424242;
}

.c0::-webkit-inner-spin-button,
.c0::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c0::-webkit-calendar-picker-indicator,
.c0::-webkit-search-cancel-button {
  display: none;
}

.c0::-ms-clear {
  display: none;
}

.c0:hover,
.c0:focus {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgba(18,80,196,0.2),0px 2px 2px 0px rgba(18,80,196,0.14),0px 1px 5px 0px rgba(18,80,196,0.12);
}

.c0[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  color: #999999;
}

.c0:-webkit-autofill {
  box-shadow: 0 0 0 1000px #fff5f5 inset;
}

.c0[disabled] {
  box-shadow: none;
  cursor: not-allowed;
}

<input
  className="c0"
/>
`;

exports[`Input component should match snapshots 8`] = `
.c0 {
  -webkit-appearance: none;
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  margin-top: 0px;
  padding: 8px 16px;
  background-color: rgba(0,0,0,0.7);
  border: 2px solid transparent;
  color: #ffffff;
}

.c0::-webkit-inner-spin-button,
.c0::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c0::-webkit-calendar-picker-indicator,
.c0::-webkit-search-cancel-button {
  display: none;
}

.c0::-ms-clear {
  display: none;
}

.c0::-webkit-input-placeholder {
  color: #ffffff;
}

.c0::-moz-placeholder {
  color: #ffffff;
}

.c0:-ms-input-placeholder {
  color: #ffffff;
}

.c0::placeholder {
  color: #ffffff;
}

.c0:hover,
.c0:focus {
  border-color: #0CC0EA;
}

.c0[disabled] {
  color: rgba(255,255,255,0.5);
  border-color: transparent;
}

.c0[disabled] {
  box-shadow: none;
  cursor: not-allowed;
}

<input
  className="c0"
/>
`;

exports[`Input component should match snapshots 9`] = `
.c0 {
  -webkit-appearance: none;
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  margin-top: 0px;
  padding: 8px 16px;
  background-color: #ffffff;
  border: 2px solid #999999;
  color: #424242;
}

.c0::-webkit-inner-spin-button,
.c0::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c0::-webkit-calendar-picker-indicator,
.c0::-webkit-search-cancel-button {
  display: none;
}

.c0::-ms-clear {
  display: none;
}

.c0:hover,
.c0:focus {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgba(18,80,196,0.2),0px 2px 2px 0px rgba(18,80,196,0.14),0px 1px 5px 0px rgba(18,80,196,0.12);
}

.c0[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  color: #999999;
}

.c0:-webkit-autofill {
  box-shadow: 0 0 0 1000px #fff5f5 inset;
}

.c0[disabled] {
  box-shadow: none;
  cursor: not-allowed;
}

<input
  className="c0"
  placeholder="Placeholder text"
/>
`;

exports[`Input component should match snapshots 10`] = `
.c0 {
  -webkit-appearance: none;
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  margin-top: 0px;
  padding: 8px 16px;
  background-color: rgba(0,0,0,0.7);
  border: 2px solid transparent;
  color: #ffffff;
}

.c0::-webkit-inner-spin-button,
.c0::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c0::-webkit-calendar-picker-indicator,
.c0::-webkit-search-cancel-button {
  display: none;
}

.c0::-ms-clear {
  display: none;
}

.c0::-webkit-input-placeholder {
  color: #ffffff;
}

.c0::-moz-placeholder {
  color: #ffffff;
}

.c0:-ms-input-placeholder {
  color: #ffffff;
}

.c0::placeholder {
  color: #ffffff;
}

.c0:hover,
.c0:focus {
  border-color: #0CC0EA;
}

.c0[disabled] {
  color: rgba(255,255,255,0.5);
  border-color: transparent;
}

.c0[disabled] {
  box-shadow: none;
  cursor: not-allowed;
}

<input
  className="c0"
  placeholder="Placeholder text"
/>
`;

exports[`Input component should match snapshots 11`] = `
.c0 {
  -webkit-appearance: none;
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  margin-top: 0px;
  padding: 8px 16px;
  background-color: #ffffff;
  border: 2px solid #999999;
  color: #424242;
}

.c0::-webkit-inner-spin-button,
.c0::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c0::-webkit-calendar-picker-indicator,
.c0::-webkit-search-cancel-button {
  display: none;
}

.c0::-ms-clear {
  display: none;
}

.c0:hover,
.c0:focus {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgba(18,80,196,0.2),0px 2px 2px 0px rgba(18,80,196,0.14),0px 1px 5px 0px rgba(18,80,196,0.12);
}

.c0[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  color: #999999;
}

.c0:-webkit-autofill {
  box-shadow: 0 0 0 1000px #fff5f5 inset;
}

.c0[disabled] {
  box-shadow: none;
  cursor: not-allowed;
}

<input
  className="c0"
  value="Value text"
/>
`;

exports[`Input component should match snapshots 12`] = `
.c0 {
  -webkit-appearance: none;
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  margin-top: 0px;
  padding: 8px 16px;
  background-color: rgba(0,0,0,0.7);
  border: 2px solid transparent;
  color: #ffffff;
}

.c0::-webkit-inner-spin-button,
.c0::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c0::-webkit-calendar-picker-indicator,
.c0::-webkit-search-cancel-button {
  display: none;
}

.c0::-ms-clear {
  display: none;
}

.c0::-webkit-input-placeholder {
  color: #ffffff;
}

.c0::-moz-placeholder {
  color: #ffffff;
}

.c0:-ms-input-placeholder {
  color: #ffffff;
}

.c0::placeholder {
  color: #ffffff;
}

.c0:hover,
.c0:focus {
  border-color: #0CC0EA;
}

.c0[disabled] {
  color: rgba(255,255,255,0.5);
  border-color: transparent;
}

.c0[disabled] {
  box-shadow: none;
  cursor: not-allowed;
}

<input
  className="c0"
  value="Value text"
/>
`;

exports[`Input component should match snapshots 13`] = `
.c0 {
  -webkit-appearance: none;
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  margin-top: 0px;
  padding: 8px 16px;
  background-color: #ffffff;
  border: 2px solid #999999;
  color: #424242;
}

.c0::-webkit-inner-spin-button,
.c0::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c0::-webkit-calendar-picker-indicator,
.c0::-webkit-search-cancel-button {
  display: none;
}

.c0::-ms-clear {
  display: none;
}

.c0:hover,
.c0:focus {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgba(18,80,196,0.2),0px 2px 2px 0px rgba(18,80,196,0.14),0px 1px 5px 0px rgba(18,80,196,0.12);
}

.c0[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  color: #999999;
}

.c0:-webkit-autofill {
  box-shadow: 0 0 0 1000px #fff5f5 inset;
}

.c0[disabled] {
  box-shadow: none;
  cursor: not-allowed;
}

<input
  className="c0"
  defaultValue="Value text"
/>
`;

exports[`Input component should match snapshots 14`] = `
.c0 {
  -webkit-appearance: none;
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  margin-top: 0px;
  padding: 8px 16px;
  background-color: rgba(0,0,0,0.7);
  border: 2px solid transparent;
  color: #ffffff;
}

.c0::-webkit-inner-spin-button,
.c0::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c0::-webkit-calendar-picker-indicator,
.c0::-webkit-search-cancel-button {
  display: none;
}

.c0::-ms-clear {
  display: none;
}

.c0::-webkit-input-placeholder {
  color: #ffffff;
}

.c0::-moz-placeholder {
  color: #ffffff;
}

.c0:-ms-input-placeholder {
  color: #ffffff;
}

.c0::placeholder {
  color: #ffffff;
}

.c0:hover,
.c0:focus {
  border-color: #0CC0EA;
}

.c0[disabled] {
  color: rgba(255,255,255,0.5);
  border-color: transparent;
}

.c0[disabled] {
  box-shadow: none;
  cursor: not-allowed;
}

<input
  className="c0"
  defaultValue="Value text"
/>
`;

exports[`Input component should match snapshots 15`] = `
.c0 {
  -webkit-appearance: none;
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  margin-top: 0px;
  padding: 8px 16px;
  background-color: #ffffff;
  border: 2px solid #999999;
  color: #424242;
}

.c0::-webkit-inner-spin-button,
.c0::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c0::-webkit-calendar-picker-indicator,
.c0::-webkit-search-cancel-button {
  display: none;
}

.c0::-ms-clear {
  display: none;
}

.c0:hover,
.c0:focus {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgba(18,80,196,0.2),0px 2px 2px 0px rgba(18,80,196,0.14),0px 1px 5px 0px rgba(18,80,196,0.12);
}

.c0[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  color: #999999;
}

.c0:-webkit-autofill {
  box-shadow: 0 0 0 1000px #fff5f5 inset;
}

.c0[disabled] {
  box-shadow: none;
  cursor: not-allowed;
}

<input
  className="c0"
  placeholder="Placeholder text"
  value="Value text"
/>
`;

exports[`Input component should match snapshots 16`] = `
.c0 {
  -webkit-appearance: none;
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  margin-top: 0px;
  padding: 8px 16px;
  background-color: rgba(0,0,0,0.7);
  border: 2px solid transparent;
  color: #ffffff;
}

.c0::-webkit-inner-spin-button,
.c0::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c0::-webkit-calendar-picker-indicator,
.c0::-webkit-search-cancel-button {
  display: none;
}

.c0::-ms-clear {
  display: none;
}

.c0::-webkit-input-placeholder {
  color: #ffffff;
}

.c0::-moz-placeholder {
  color: #ffffff;
}

.c0:-ms-input-placeholder {
  color: #ffffff;
}

.c0::placeholder {
  color: #ffffff;
}

.c0:hover,
.c0:focus {
  border-color: #0CC0EA;
}

.c0[disabled] {
  color: rgba(255,255,255,0.5);
  border-color: transparent;
}

.c0[disabled] {
  box-shadow: none;
  cursor: not-allowed;
}

<input
  className="c0"
  placeholder="Placeholder text"
  value="Value text"
/>
`;

exports[`Input component should match snapshots 17`] = `
.c0 {
  -webkit-appearance: none;
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  margin-top: 0px;
  padding: 8px 16px;
  background-color: #ffffff;
  border: 2px solid #999999;
  color: #424242;
  border-color: #e91b0c;
}

.c0::-webkit-inner-spin-button,
.c0::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c0::-webkit-calendar-picker-indicator,
.c0::-webkit-search-cancel-button {
  display: none;
}

.c0::-ms-clear {
  display: none;
}

.c0:hover,
.c0:focus {
  border-color: #e91b0c;
  box-shadow: 0px 3px 1px -2px rgba(233,27,12,0.2),0px 2px 2px 0px rgba(233,27,12,0.14),0px 1px 5px 0px rgba(233,27,12,0.12);
}

.c0[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  color: #999999;
}

.c0:-webkit-autofill {
  box-shadow: 0 0 0 1000px #fff5f5 inset;
}

.c0[disabled] {
  box-shadow: none;
  cursor: not-allowed;
}

<input
  className="c0"
  disabled={true}
/>
`;

exports[`Input component should match snapshots 18`] = `
.c0 {
  -webkit-appearance: none;
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  margin-top: 0px;
  padding: 8px 16px;
  background-color: rgba(0,0,0,0.7);
  border: 2px solid transparent;
  color: #ffffff;
  border-color: #ffffff;
}

.c0::-webkit-inner-spin-button,
.c0::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c0::-webkit-calendar-picker-indicator,
.c0::-webkit-search-cancel-button {
  display: none;
}

.c0::-ms-clear {
  display: none;
}

.c0::-webkit-input-placeholder {
  color: #ffffff;
}

.c0::-moz-placeholder {
  color: #ffffff;
}

.c0:-ms-input-placeholder {
  color: #ffffff;
}

.c0::placeholder {
  color: #ffffff;
}

.c0:hover,
.c0:focus {
  border-color: #0CC0EA;
}

.c0[disabled] {
  color: rgba(255,255,255,0.5);
  border-color: transparent;
}

.c0[disabled] {
  box-shadow: none;
  cursor: not-allowed;
}

<input
  className="c0"
  disabled={true}
/>
`;
